--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body style='height: 100%'>
     <div class='navbar navbar-inverse navbar-fixed-top'>
       <div class='navbar-inner'>
-        <div class='container-fluid'>
+        <div class='container'>
           <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'>
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
