--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,16 +34,10 @@
                 <a href='/'>Home</a>
               </li>
               <li>
-                <a href="/articles/guides.html">All guides</a>
+                <a href="#topics">Topics</a>
               </li>
               <li>
-                <a href='/articles/community.html'>Community</a>
-              </li>
-              <li>
-                <a href='https://github.com/clojurewerkz'>Code on Github</a>
-              </li>
-              <li>
-                <a href='http://clojurewerkz.org'>More Clojure libraries</a>
+                <a href="#topics">Schedule</a>
               </li>
             </ul>
           </div>
