--- a/assets/stylesheets/bootstrap-docs.css
+++ b/assets/stylesheets/bootstrap-docs.css
@@ -90,7 +90,7 @@ hr.soften {
   padding: 40px 0;
   color: #fff;
   text-align: center;
-  background: url(/assets/images/bg.jpg) -250px -300px no-repeat, #000;
+  background: url(/assets/images/bg.jpg) center -300px no-repeat, #000;
 }
 
 .jumbotron h1 {
