--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -15,7 +15,16 @@
     <script src='/assets/javascripts/bootstrap.min.js'></script>
     <script src='/assets/javascripts/toc.js'></script>
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type' />
-    <!-- Google Analytics placeholder -->
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-42831543-1', 'clojureworkshop.com');
+      ga('send', 'pageview');
+
+    </script>
   </head>
   <body data-spy="scroll" data-target="#side-navigation">
     <div class='navbar navbar-inverse navbar-fixed-top'>
