--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,7 +36,7 @@
             <span class='icon-bar'></span>
             <span class='icon-bar'></span>
           </a>
-          <a class='brand' href='/'>Project Name</a>
+          <a class='brand' href='/'>Clojure Workshop</a>
           <div class='nav-collapse'>
             <ul class='nav'>
               <li>
@@ -60,6 +60,7 @@
           &nbsp;<a href='http://github.com/clojurewerkz'>ClojureWerkz Team</a>.</p>
         <p>Follow us on Twitter:
           &nbsp;<a href='http://twitter.com/clojurewerkz'>ClojureWerkz</a>,&nbsp;<a href='http://twitter.com/michaelklishin'>Michael Klishin</a>,&nbsp;<a href='http://twitter.com/ifesdjeen'>Alex P</a></p>
+        <p>If you would like to sponsor one of our events, ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>.</p>
       </div>
     </footer>
   </body>
