--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -5,15 +5,15 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
     <meta content='' name='description' />
     <meta content='The ClojureWerkz Team' name='author' />
-    <link href='/assets/stylesheets/bootstrap.min.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/bootstrap-docs.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/bootstrap-responsive.min.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/sass/styles.css' media='screen' rel='stylesheet' type='text/css' />
+
+    <link href='/assets/redesign/stylesheets/bootstrap.min.css' media='screen' rel='stylesheet' type='text/css' />
+    <link href='/assets/redesign/stylesheets/bootstrap-docs.css' media='screen' rel='stylesheet' type='text/css' />
+    <link href='/assets/redesign/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600' rel='stylesheet' type='text/css' />
-    <script src='/assets/javascripts/jquery-1.9.1.min.js' type='text/javascript'></script>
-    <script src='/assets/javascripts/bootstrap.min.js'></script>
-    <script src='/assets/javascripts/toc.js'></script>
+    <script src='/assets/redesign/javascripts/jquery-1.9.1.min.js' type='text/javascript'></script>
+    <script src='/assets/redesign/javascripts/bootstrap.min.js'></script>
+    <script src='/assets/redesign/javascripts/toc.js'></script>
+
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type' />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -27,51 +27,40 @@
     </script>
   </head>
   <body data-spy="scroll" data-target="#side-navigation">
-    <div class='navbar navbar-inverse navbar-fixed-top'>
-      <div class='navbar-inner'>
-        <div class='container'>
-          <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-          </a>
-          <a class='brand' href='/'>Project Name</a>
-          <div class='nav-collapse'>
-            <ul class='nav'>
-              <li class=''>
-                <a href='/'>Home</a>
-              </li>
-              <li>
-                <a href="/articles/guides.html">All guides</a>
-              </li>
-              <li>
-                <a href='/articles/community.html'>Community</a>
-              </li>
-              <li>
-                <a href='https://github.com/clojurewerkz'>Code on Github</a>
-              </li>
-              <li>
-                <a href='http://clojurewerkz.org'>More Clojure libraries</a>
-              </li>
-            </ul>
-          </div>
+
+    <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="/" class="navbar-brand">Clojure Workshop</a>
         </div>
+        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href='http://clojurewerkz.org'>Clojure libraries</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </div>
+    </header>
+
     <div class='container'>
       <div class='row'>
-        <div class='span3 bs-docs-sidebar' id='side-navigation'>
-          <ul id="toc" class="nav nav-list bs-docs-sidenav"></ul>
+        <div class='col-md-3 bs-docs-sidebar' id='side-navigation'>
+          <div class="bs-sidebar hidden-print">
+            <ul id="toc" class="nav bs-sidenav"></ul>
+          </div>
         </div>
-        <div class='span9'>
+        <div class='col-md-9'>
           {{ content }}
-
-          <h2>Tell Us What You Think!</h2>
-
-          <p>Please take a moment to tell us what you think about this guide on Twitter or the <a href="TBD">Project Name mailing list</a></p>
-
-          <p>Let us know what was unclear or what has not been covered. Maybe you do not like the guide style or grammar or discover spelling mistakes. Reader feedback is key to making the documentation better.</p>
-
         </div>
       </div>
     </div>
