--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,15 @@
     <meta content='width=device-width, initial-scale=1.0' name='viewport' />
     <meta content='' name='description' />
     <meta content='The ClojureWerkz Team' name='author' />
-    <link href='/assets/stylesheets/bootstrap.min.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/bootstrap-responsive.min.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/bootstrap-docs.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css' />
-    <link href='/assets/stylesheets/sass/styles.css' media='screen' rel='stylesheet' type='text/css' />
+
+    <link href='/assets/redesign/stylesheets/bootstrap.min.css' media='screen' rel='stylesheet' type='text/css' />
+    <link href='/assets/redesign/stylesheets/bootstrap-docs.css' media='screen' rel='stylesheet' type='text/css' />
+    <link href='/assets/redesign/stylesheets/pygments.css' media='screen' rel='stylesheet' type='text/css' />
     <link href='http://fonts.googleapis.com/css?family=Signika+Negative:300,400,600' rel='stylesheet' type='text/css' />
-    <script src='/assets/javascripts/jquery-1.9.1.min.js' type='text/javascript'></script>
-    <script src='/assets/javascripts/toc.js'></script>
-    <script src='/assets/javascripts/bootstrap.min.js'></script>
+    <script src='/assets/redesign/javascripts/jquery-1.9.1.min.js' type='text/javascript'></script>
+    <script src='/assets/redesign/javascripts/bootstrap.min.js'></script>
+    <script src='/assets/redesign/javascripts/toc.js'></script>
+
     <meta content='text/html;charset=utf-8' http-equiv='Content-Type' />
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -28,34 +28,38 @@
     </script>
   </head>
   <body style='height: 100%'>
-    <div class='navbar navbar-inverse navbar-fixed-top'>
-      <div class='navbar-inner'>
-        <div class='container'>
-          <a class='btn btn-navbar' data-target='.nav-collapse' data-toggle='collapse'>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-            <span class='icon-bar'></span>
-          </a>
-          <a class='brand' href='/'>Clojure Workshop</a>
-          <div class='nav-collapse'>
-            <ul class='nav'>
-              <li>
-                <a href='/'>Home</a>
-              </li>
-              <li>
-                <a href="#topics">Topics</a>
-              </li>
-              <li>
-                <a href="#topics">Schedule</a>
-              </li>
-            </ul>
-          </div>
+
+    <header class="navbar navbar-inverse navbar-fixed-top bs-docs-nav" role="banner">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" type="button" data-toggle="collapse" data-target=".bs-navbar-collapse">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a href="/" class="navbar-brand">Clojure Workshop</a>
         </div>
+        <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
+          <ul class="nav navbar-nav">
+            <li>
+              <a href="/">Home</a>
+            </li>
+            <li>
+              <a href="/articles/getting_started.html">Getting Started</a>
+            </li>
+            <li>
+              <a href='http://clojurewerkz.org'>Clojure libraries</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-    </div>
+    </header>
+
     {{ content }}
-    <footer class='footer'>
-      <div class='container'>
+
+    <footer class="bs-footer" role="contentinfo">
+      <div class="container">
         <p>This website was developed by the
           &nbsp;<a href='http://github.com/clojurewerkz'>ClojureWerkz Team</a>.</p>
         <p>Follow us on Twitter:
@@ -63,5 +67,6 @@
         <p>If you would like to sponsor one of our events, ping us at <a href="mailto:sponsors@clojureworkshop.com">sponsors@clojureworkshop.com</a>.</p>
       </div>
     </footer>
+
   </body>
 </html>
