Preparing for Functional Institute

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,7 +49,13 @@
               <a href="/articles/getting_started.html">Getting Started</a>
             </li>
             <li>
-              <a href='http://clojurewerkz.org'>Clojure libraries</a>
+              <a href="http://clojure-doc.org">Clojure Documentation</a>
+            </li>
+            <li>
+              <a href="http://clojurewerkz.org">Clojure libraries</a>
+            </li>
+            <li>
+              <a href="mailto:alex@clojurewerkz.org">Contact</a>
             </li>
           </ul>
         </nav>
